--- a/combat.html
+++ b/combat.html
@@ -626,7 +626,7 @@
                 <div class="item-card common">
                     <div class="item-header">
                         <img src="images/Golden_Chestplate_JE2_BE2.png" alt="Golden Chestplate">
-                        <strong>Iron Boots</strong>
+                        <strong>Golden Chestplate</strong>
                     </div>
                     <strong>Price: ₱260<br></strong>
                     <strong>⭐4.1   <br>1012 Sold </strong>
